# LayerEditor

./: .clang-format  .gitignore  CMakeLists.txt  ProjectConfig.cmake  README.md  UserConfig.cmake  main.cpp  original.html  vcpkg.json
App/: CMakeLists.txt
CommonDef/include/CommonDef/: ExportDef.h
ImageProcessor/: CMakeLists.txt  ProjectTestConfig.cmake  mainTest.cpp
ImageProcessor/include/: ImageProcessor.hpp  ModelProcBase.hpp  ModelProcImage.hpp
ImageProcessor/src/: ImageProcessor.cpp  ModelProcBase.cpp  ModelProcImage.cpp
Logger/: CMakeLists.txt  ILogger.cpp  ILogger.hpp
Logger/include/: CLogger.hpp  ExportDefine.h  GlobalDefine.h  Logger.hpp  MyLogger.hpp
Logger/lib/: Loggerd.exp
Logger/src/: CLogger.cpp  Logger.cpp  MyLogger.cpp
WindowManager/: CMakeLists.txt
WindowManager/CustomGraphics/include/: CustomScene.hpp  CustomView.hpp  ResizableRectItem.hpp  RotatingRectItem.hpp
WindowManager/CustomGraphics/src/: CustomScene.cpp  CustomView.cpp  CutRectItem.cpp  ResizableRectItem.cpp  RotatingRectItem.cpp
WindowManager/CustomList/include/: CustomFileListWidget.hpp
WindowManager/CustomList/src/: CustomFileListWidget.cpp
WindowManager/CustomMenuBar/include/: CustomMenuBar.hpp
WindowManager/CustomMenuBar/src/: CustomMenuBar.cpp
WindowManager/CustomTitleBar/include/: CustomTitleBar.hpp
WindowManager/CustomTitleBar/src/: CustomTitleBar.cpp
WindowManager/asset/: config.qrc  res.qrc  style.qrc
WindowManager/asset/config/: menuConfig.json
WindowManager/asset/qss/: dark_theme.qss
WindowManager/include/: MainWindow.hpp  TestWindow.hpp
WindowManager/src/: MainWindow.cpp  TestWindow.cpp
pcie/: .clang-format  .gitignore
pcie/HfFeCommLayer/: CHfFeCommonPcie.cpp  CHfFeCommonPcie.h  DriverDefine.h  HfFeCommLayer.vcxproj  HfFeCommLayer.vcxproj.filters  HfFeCommonDefine.h  IHfFeCommonLayer.cpp  IHfFeCommonLayer.h  framework.h  pch.cpp  pch.h
pcie/HfFeCommLayer/x64/Debug/: HfFeCommonLayerd.dll.recipe
pcie/HfFeDataParser/: CHfFeDataParserBase.cpp  CHfFeDataParserPCIE_V15.cpp  CHfFeDataParserPCIE_V15.h  HfFeDataParser.vcxproj  HfFeDataParser.vcxproj.filters  framework.h  pch.h
pcie/HfFeDataParser/x64/Debug/: HfFeDataParser.dll.recipe  HfFeDataParserd.dll.recipe
pcie/HuafengPciEDriver/: DMA.c  DMA.h  Device.c  Device.h  Driver.c  Driver.h  FileObject.c  FileObject.h  HuafengPciEDriver.inf  HuafengPciEDriver.vcxproj  HuafengPciEDriver.vcxproj.filters  IsrDpc.c  IsrDpc.h  LocalDefine.h  LocalFunction.c  LocalFunction.h  PowerPnp.c  PowerPnp.h  Public.h  Queue.c  Queue.h  ReadMe.txt  Trace.h  packages.config
pcie/HuafengPciEDriver/x64/Debug/: DMA.tmh  FileObject.tmh  HuaFengPciEDriver.sys.recipe  HuafengPciEDriver.inf  IsrDpc.tmh  LocalFunction.tmh  PowerPnp.tmh  Queue.tmh
pcie/HuafengPciEDriver/x64/Release/: HuaFengPciEDriver.sys.recipe  HuafengPciEDriver.inf
pcie/Test/: CMakeLists.txt  Test.code-workspace  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
pcie/Test/HfFeCommonLayer/: HfFeCommonDefine.h  IHfFeCommonLayer.h
pcie/Test/HfFeDataParser/: CHfFeDataParserBase.h  HfFeDataParserDefine.h  LocalDefine.h
pcie/Test/PCIEWindow/include/: PCIEWindow.hpp
scripts/: tf2onnxfile.py
